--- a/style.css
+++ b/style.css
@@ -20,3 +20,23 @@ header {
     color: #E5E7EB;
     padding: 15px
 }
+
+.section-one {
+    background-color: #1F2937;
+}
+
+.section-two {
+    background-color: #ffffff;
+}
+
+.section-three {
+    background-color: #E5E7EB;
+}
+
+.section-four {
+    background-color: #ffffff;
+}
+
+footer {
+    background-color:#1F2937;
+}
