--- a/style.css
+++ b/style.css
@@ -27,6 +27,25 @@ header {
 
 .section-two {
     background-color: #ffffff;
+    display: flex;
+}
+
+h2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+
+.figure-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 auto;
+}
+
+img {
+    width: 175px;
+    height: 175px;
 }
 
 .section-three {
