--- a/style.css
+++ b/style.css
@@ -28,13 +28,17 @@ header {
 .section-two {
     background-color: #ffffff;
     display: flex;
-}
+    font-size: 18px;
+    text-align: center;
+    flex: 1 1 auto;
+    }
 
 h2 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
+    font-size: 36px;
+    font-weight: 900;
 }
 
 .figure-wrapper {
@@ -43,9 +47,12 @@ h2 {
     flex: 1 1 auto;
 }
 
-img {
-    width: 175px;
-    height: 175px;
+
+.img2 {
+    width: 200px;
+    height: 200px;
+    flex: 1 1 auto;
+    border: 1px solid blue;
 }
 
 .section-three {
