--- a/style.css
+++ b/style.css
@@ -1,28 +1,72 @@
-header {
-    background-color:#1F2937;
-}
-
 .heading {
     display: flex;
     flex-direction: row;
     font-family: "Roboto";
+    flex: 1 1 auto;
+    background-color:#1F2937;
 }
 
 .heading .logo {
     font-size: 24px;
     color: #F9FAF8;
     margin-right: auto;
-    padding: 10px
+    padding: 10px;
 }
 
 .link {
     font-size: 18px;
     color: #E5E7EB;
-    padding: 15px
+    padding: 15px;
 }
 
 .section-one {
     background-color: #1F2937;
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 100%;
+    gap: 5px;
+    padding: 20px;
+}
+
+.section1img {
+    margin: 50px;
+    flex: 1 1 100%;
+}
+
+
+.section1con {
+    width: 550px;
+    flex: 1 1 100%;
+    margin: 50px;
+}
+
+.heading1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+    margin-bottom: -20px;
+    flex: 1 1 100%;
+}
+
+.content1 {
+    font-size: 18px;
+    color: #e5e7eb;
+    flex: 1 1 100%;
+}
+
+.img1 {
+    width: 400px;
+    height: 200px;
+    margin: auto;
+}
+
+.button1 {
+    width: 100px;
+    background-color: #3882f6;
+    color: #ffffff;
+    border-radius: 25px;
+    font-size: 18px;
+    flex: 1 1 100%;
 }
 
 .section-two {
@@ -31,6 +75,7 @@ header {
     font-size: 18px;
     text-align: center;
     flex: 1 1 auto;
+    position: center center;
     }
 
 h2 {
@@ -39,20 +84,30 @@ h2 {
     justify-content: center;
     font-size: 36px;
     font-weight: 900;
+    flex: 1 1 auto;
 }
 
 .figure-wrapper {
     display: flex;
     flex-direction: row;
     flex: 1 1 auto;
+    padding-bottom: 50px;
 }
 
+figcaption {
+    width: 50;
+    text-align: center;
+    padding-left: 55px;
+    padding-right: 55px;
+    flex: 1 1 auto;
+}
 
 .img2 {
     width: 200px;
     height: 200px;
     flex: 1 1 auto;
-    border: 1px solid blue;
+    border: 5px solid #3882F6;
+    border-radius: 25px;
 }
 
 .section-three {
@@ -65,4 +120,7 @@ h2 {
 
 footer {
     background-color:#1F2937;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
 }
